[package]
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
categories = ["rust-patterns", "multimedia::images"]
description = "A trivial struct for interchange of pixel buffers with width, height & stride"
documentation = "https://docs.rs/imgref/"
homepage = "https://github.com/pornel/imgref#readme"
keywords = ["interoperability", "stride", "image", "frame"]
license = "CC0-1.0"
name = "imgref"
readme = "README.md"
repository = "https://github.com/pornel/imgref"
version = "1.3.1"

