[package]
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
categories = ["rust-patterns", "multimedia::images"]
description = "A trivial struct for interchange of 2d-dimensional pixel buffers with width, height & stride"
documentation = "https://docs.rs/imgref/"
homepage = "https://lib.rs/crates/imgref"
keywords = ["interoperability", "stride", "image", "frame", "vec2d"]
license = "CC0-1.0"
name = "imgref"
readme = "README.md"
repository = "https://github.com/kornelski/imgref"
version = "1.9.1"
edition = "2018"

[badges]
travis-ci = { repository = "kornelski/imgref" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
